remove assets folder

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       // Randomly chooses a choice from the options array. This is the Computer's guess.
       var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
       // This logic determines the outcome of the game (win/loss), and increments the appropriate number
-        if ((userGuess === computerGuess  )) {
+        if (userGuess === computerGuess) {
           wins++;
         } else { losses ++}
      
